--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -9,10 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1c5060d9dc.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1 id="title">My kazakh words</h1>
-    <input id="search_bar" type="text" id="search_input" placeholder="" autofocus>
+    <h1 id="title"><i class="fa-solid fa-sun"></i>   My kazakh words   <i class="fa-solid fa-sun"></i></h1>
+    <div id="search_bar_div">
+        <input id="search_bar" type="text" id="search_input" placeholder="" autofocus>
+    </div>
     <div id="words_outer"><div id="words"></div></div></div>
     <div id="guess_game">
         <h2>Guess the word</h2>
@@ -20,10 +23,14 @@
         <input id="guess_input" type="text" placeholder="Enter a guess" autofocus>
         <p id="guess_result"></p>
     </div>
+    <div id="letters_div">
+        <h2>Kazakh alphabet</h2>
+    </div>
     <script>
         var words_list = [];
         var shuffled_list = [];
         var guess_index = 0;
+        var alphabet = ["а","ә","б","в","г","ғ","д","е","ж","з","и","й","к","қ","л","м","н","ң","о","ө","п","р","с","т","у","ұ","ү","ф","х","һ","ц","ч","ш","щ","ы","э","ю","я","і"];
 
         $(document).ready(function(){
             var url = "https://gigiparmentier.github.io/kazakh/words.txt";
@@ -56,6 +63,12 @@
                 shuffled_list = shuffleArray(words_list);
                 start_game();
             });
+
+            for (var i = 0; i < alphabet.length; i++) {
+                var letter = $("<p>").text(alphabet[i]);
+                letter.addClass("letter");
+                $("#letters_div").append(letter);
+            }
         });
 
         $("#search_bar").on("input", function() {
