--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -12,6 +12,11 @@
     <script src="https://kit.fontawesome.com/1c5060d9dc.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="wave">
+        <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+          <path d="M0.00,49.98 C163.08,346.87 256.20,-142.58 500.00,49.98 L500.00,0.00 L0.00,0.00 Z" style="stroke: none;fill: #f2e269;"></path>
+        </svg>
+    </div>
     <h1 id="title"><i class="fa-solid fa-sun"></i>   My kazakh words   <i class="fa-solid fa-sun"></i></h1>
     <div id="search_bar_div">
         <input id="search_bar" type="text" id="search_input" placeholder="" autofocus>
