added animated wave

--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <div id="wave">
-        <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-          <path d="M0.00,49.98 C163.08,346.87 256.20,-142.58 500.00,49.98 L500.00,0.00 L0.00,0.00 Z" style="stroke: none;fill: #f2e269;"></path>
+        <svg viewBox="0 0 1000 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+          <path d="M1000,101.71c0,0-106.81-108.65-238.66,0s-261.34,0-261.34,0s-106.81-108.65-238.66,0S0,101.71,0,101.71V0h1000 V101.71z" style="stroke: none;fill: #f2e269;"></path>
         </svg>
     </div>
     <h1 id="title"><i class="fa-solid fa-sun"></i>   My kazakh words   <i class="fa-solid fa-sun"></i></h1>
