--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/1c5060d9dc.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="wave">
+    <div id="wave_top">
         <svg viewBox="0 0 1000 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
           <path d="M1000,101.71c0,0-106.81-108.65-238.66,0s-261.34,0-261.34,0s-106.81-108.65-238.66,0S0,101.71,0,101.71V0h1000 V101.71z" style="stroke: none;fill: #f2e269;"></path>
         </svg>
@@ -30,6 +30,72 @@
     </div>
     <div id="letters_div">
         <h2>Kazakh alphabet</h2>
+    </div>
+    <table id="cases">
+        <h2>Cases</h2>
+        <tr>
+            <th>Case</th>
+            <th>Sing. 1st person</th>
+            <th>Sing. 2nd person</th>
+            <th>Sing. 3rd person</th>
+            <th>Plural</th>
+        </tr>
+        <tr>
+            <td>Nominative</td>
+            <td>мең</td>
+            <td>сен</td>
+            <td>ол</td>
+            <td>біз</td>
+        </tr>
+        <tr>
+            <td>Accusative</td>
+            <td>мені</td>
+            <td>сені</td>
+            <td>оны</td>
+            <td>бізді</td>
+        </tr>
+        <tr>
+            <td>Genitive</td>
+            <td>менің</td>
+            <td>сенің</td>
+            <td>оның</td>
+            <td>бізге</td>
+        </tr>
+        <tr>
+            <td>Dative</td>
+            <td>маған</td>
+            <td>саған</td>
+            <td>оған</td>
+            <td>бізге</td>
+        </tr>
+        <tr>
+            <td>Locative</td>
+            <td>менде</td>
+            <td>сенде</td>
+            <td>онда</td>
+            <td>бізде</td>
+        </tr>
+        <tr>
+            <td>Ablative</td>
+            <td>менен</td>
+            <td>сенен</td>
+            <td>одан</td>
+            <td>бізден</td>
+        </tr>
+        <tr>
+            <td>Instrumental</td>
+            <td>менімен</td>
+            <td>сенімен</td>
+            <td>онымен</td>
+            <td>бізбен</td>
+        </tr>
+    </table>
+
+
+    <div id="wave_bottom">
+        <svg viewBox="0 0 1000 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+          <path d="M1000,48.29c0,0-106.81,108.65-238.66,0s-261.34,0-261.34,0s-106.81,108.65-238.66,0S0,48.29,0,48.29V150h1000 V48.29z" style="stroke: none;fill: #f2e269;"></path>
+        </svg>
     </div>
     <script>
         var words_list = [];
