--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -101,7 +101,7 @@
         var words_list = [];
         var shuffled_list = [];
         var guess_index = 0;
-        var alphabet = ["а","ә","б","в","г","ғ","д","е","ж","з","и","й","к","қ","л","м","н","ң","о","ө","п","р","с","т","у","ұ","ү","ф","х","һ","ц","ч","ш","щ","ы","э","ю","я","і"];
+        var alphabet = ["а","ә","б","в","г","ғ","д","е","ж","з","и","й","к","қ","л","м","н","ң","о","ө","п","р","с","т","у","ұ","ү","ф","х","һ","ц","ч","ш","щ","ы","і","э","ю","я"];
 
         $(document).ready(function(){
             var url = "https://gigiparmentier.github.io/kazakh/words.txt";
