--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -59,7 +59,7 @@
             <td>менің</td>
             <td>сенің</td>
             <td>оның</td>
-            <td>бізге</td>
+            <td>біздің</td>
         </tr>
         <tr>
             <td>Dative</td>
