--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -38,7 +38,9 @@
             <th>Sing. 1st person</th>
             <th>Sing. 2nd person</th>
             <th>Sing. 3rd person</th>
-            <th>Plural</th>
+            <th>Plur. 1st person</th>
+            <th>Plur. 2nd person</th>
+            <th>Plur. 3rd person</th>
         </tr>
         <tr>
             <td>Nominative</td>
@@ -46,6 +48,8 @@
             <td>сен</td>
             <td>ол</td>
             <td>біз</td>
+            <td>сенер</td>
+            <td>олар</td>
         </tr>
         <tr>
             <td>Accusative</td>
@@ -53,6 +57,8 @@
             <td>сені</td>
             <td>оны</td>
             <td>бізді</td>
+            <td>сендерді</td>
+            <td>оларды</td>
         </tr>
         <tr>
             <td>Genitive</td>
@@ -60,6 +66,8 @@
             <td>сенің</td>
             <td>оның</td>
             <td>біздің</td>
+            <td>сендердің</td>
+            <td>олардың</td>
         </tr>
         <tr>
             <td>Dative</td>
@@ -67,6 +75,8 @@
             <td>саған</td>
             <td>оған</td>
             <td>бізге</td>
+            <td>сендерге</td>
+            <td>оларға</td>
         </tr>
         <tr>
             <td>Locative</td>
@@ -74,6 +84,8 @@
             <td>сенде</td>
             <td>онда</td>
             <td>бізде</td>
+            <td>сендерде</td>
+            <td>оларда</td>
         </tr>
         <tr>
             <td>Ablative</td>
@@ -81,6 +93,8 @@
             <td>сенен</td>
             <td>одан</td>
             <td>бізден</td>
+            <td>сендерден</td>
+            <td>олардан</td>
         </tr>
         <tr>
             <td>Instrumental</td>
@@ -88,6 +102,8 @@
             <td>сенімен</td>
             <td>онымен</td>
             <td>бізбен</td>
+            <td>сендермен</td>
+            <td>олармен</td>
         </tr>
     </table>
 
