cases div to scroll on mobile

--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -31,81 +31,83 @@
     <div id="letters_div">
         <h2>Kazakh alphabet</h2>
     </div>
-    <table id="cases">
-        <h2>Cases</h2>
-        <tr>
-            <th>Case</th>
-            <th>Sing. 1st person</th>
-            <th>Sing. 2nd person</th>
-            <th>Sing. 3rd person</th>
-            <th>Plur. 1st person</th>
-            <th>Plur. 2nd person</th>
-            <th>Plur. 3rd person</th>
-        </tr>
-        <tr>
-            <td>Nominative</td>
-            <td>мен</td>
-            <td>сен</td>
-            <td>ол</td>
-            <td>біз</td>
-            <td>сенер</td>
-            <td>олар</td>
-        </tr>
-        <tr>
-            <td>Accusative</td>
-            <td>мені</td>
-            <td>сені</td>
-            <td>оны</td>
-            <td>бізді</td>
-            <td>сендерді</td>
-            <td>оларды</td>
-        </tr>
-        <tr>
-            <td>Genitive</td>
-            <td>менің</td>
-            <td>сенің</td>
-            <td>оның</td>
-            <td>біздің</td>
-            <td>сендердің</td>
-            <td>олардың</td>
-        </tr>
-        <tr>
-            <td>Dative</td>
-            <td>маған</td>
-            <td>саған</td>
-            <td>оған</td>
-            <td>бізге</td>
-            <td>сендерге</td>
-            <td>оларға</td>
-        </tr>
-        <tr>
-            <td>Locative</td>
-            <td>менде</td>
-            <td>сенде</td>
-            <td>онда</td>
-            <td>бізде</td>
-            <td>сендерде</td>
-            <td>оларда</td>
-        </tr>
-        <tr>
-            <td>Ablative</td>
-            <td>менен</td>
-            <td>сенен</td>
-            <td>одан</td>
-            <td>бізден</td>
-            <td>сендерден</td>
-            <td>олардан</td>
-        </tr>
-        <tr>
-            <td>Instrumental</td>
-            <td>менімен</td>
-            <td>сенімен</td>
-            <td>онымен</td>
-            <td>бізбен</td>
-            <td>сендермен</td>
-            <td>олармен</td>
-        </tr>
-    </table>
+    <div id="cases_div">
+        <table id="cases">
+            <h2>Cases</h2>
+            <tr>
+                <th>Case</th>
+                <th>Sing. 1st person</th>
+                <th>Sing. 2nd person</th>
+                <th>Sing. 3rd person</th>
+                <th>Plur. 1st person</th>
+                <th>Plur. 2nd person</th>
+                <th>Plur. 3rd person</th>
+            </tr>
+            <tr>
+                <td>Nominative</td>
+                <td>мен</td>
+                <td>сен</td>
+                <td>ол</td>
+                <td>біз</td>
+                <td>сенер</td>
+                <td>олар</td>
+            </tr>
+            <tr>
+                <td>Accusative</td>
+                <td>мені</td>
+                <td>сені</td>
+                <td>оны</td>
+                <td>бізді</td>
+                <td>сендерді</td>
+                <td>оларды</td>
+            </tr>
+            <tr>
+                <td>Genitive</td>
+                <td>менің</td>
+                <td>сенің</td>
+                <td>оның</td>
+                <td>біздің</td>
+                <td>сендердің</td>
+                <td>олардың</td>
+            </tr>
+            <tr>
+                <td>Dative</td>
+                <td>маған</td>
+                <td>саған</td>
+                <td>оған</td>
+                <td>бізге</td>
+                <td>сендерге</td>
+                <td>оларға</td>
+            </tr>
+            <tr>
+                <td>Locative</td>
+                <td>менде</td>
+                <td>сенде</td>
+                <td>онда</td>
+                <td>бізде</td>
+                <td>сендерде</td>
+                <td>оларда</td>
+            </tr>
+            <tr>
+                <td>Ablative</td>
+                <td>менен</td>
+                <td>сенен</td>
+                <td>одан</td>
+                <td>бізден</td>
+                <td>сендерден</td>
+                <td>олардан</td>
+            </tr>
+            <tr>
+                <td>Instrumental</td>
+                <td>менімен</td>
+                <td>сенімен</td>
+                <td>онымен</td>
+                <td>бізбен</td>
+                <td>сендермен</td>
+                <td>олармен</td>
+            </tr>
+        </table>
+    </div>
 
 
     <div id="wave_bottom">
