added present + future tense

--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -45,66 +45,143 @@
             </tr>
             <tr>
                 <td>Nominative</td>
-                <td>мен</td>
-                <td>сен</td>
-                <td>ол</td>
-                <td>біз</td>
-                <td>сенер</td>
-                <td>олар</td>
+                <td>-мен</td>
+                <td>-сен</td>
+                <td>-ол</td>
+                <td>-біз</td>
+                <td>-сенер</td>
+                <td>-олар</td>
             </tr>
             <tr>
                 <td>Accusative</td>
-                <td>мені</td>
-                <td>сені</td>
-                <td>оны</td>
-                <td>бізді</td>
-                <td>сендерді</td>
-                <td>оларды</td>
+                <td>-мені</td>
+                <td>-сені</td>
+                <td>-оны</td>
+                <td>-бізді</td>
+                <td>-сендерді</td>
+                <td>-оларды</td>
             </tr>
             <tr>
                 <td>Genitive</td>
-                <td>менің</td>
-                <td>сенің</td>
-                <td>оның</td>
-                <td>біздің</td>
-                <td>сендердің</td>
-                <td>олардың</td>
+                <td>-менің</td>
+                <td>-сенің</td>
+                <td>-оның</td>
+                <td>-біздің</td>
+                <td>-сендердің</td>
+                <td>-олардың</td>
             </tr>
             <tr>
                 <td>Dative</td>
-                <td>маған</td>
-                <td>саған</td>
-                <td>оған</td>
-                <td>бізге</td>
-                <td>сендерге</td>
-                <td>оларға</td>
+                <td>-маған</td>
+                <td>-саған</td>
+                <td>-оған</td>
+                <td>-бізге</td>
+                <td>-сендерге</td>
+                <td>-оларға</td>
             </tr>
             <tr>
                 <td>Locative</td>
-                <td>менде</td>
-                <td>сенде</td>
-                <td>онда</td>
-                <td>бізде</td>
-                <td>сендерде</td>
-                <td>оларда</td>
+                <td>-менде</td>
+                <td>-сенде</td>
+                <td>-онда</td>
+                <td>-бізде</td>
+                <td>-сендерде</td>
+                <td>-оларда</td>
             </tr>
             <tr>
                 <td>Ablative</td>
-                <td>менен</td>
-                <td>сенен</td>
-                <td>одан</td>
-                <td>бізден</td>
-                <td>сендерден</td>
-                <td>олардан</td>
+                <td>-менен</td>
+                <td>-сенен</td>
+                <td>-одан</td>
+                <td>-бізден</td>
+                <td>-сендерден</td>
+                <td>-олардан</td>
             </tr>
             <tr>
                 <td>Instrumental</td>
-                <td>менімен</td>
-                <td>сенімен</td>
-                <td>онымен</td>
-                <td>бізбен</td>
-                <td>сендермен</td>
-                <td>олармен</td>
+                <td>-менімен</td>
+                <td>-сенімен</td>
+                <td>-онымен</td>
+                <td>-бізбен</td>
+                <td>-сендермен</td>
+                <td>-олармен</td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="verb_div">
+        <h2>Present/Future Time conjugation</h2>
+        <table id="vowels_table">
+            <tr>
+                <td>Hard vowels:</td>
+                <td>Аа</td>
+                <td></td>
+                <td></td>
+                <td>Оо</td>
+                <td>Уу</td>
+                <td>Ұұ</td>
+                <td>Ыы</td>
+            </tr>
+            <tr>
+                <td>Soft vowels:</td>
+                <td>Әә</td>
+                <td>Ее</td>
+                <td>Ии</td>
+                <td>Өө</td>
+                <td></td>
+                <td>Үү</td>
+                <td>Іі</td>
+            </tr>
+        </table>
+        <table id="verb">
+            <tr>
+                <th>Person</th>
+                <th>Ends w/ soft vowel</th>
+                <th>Ends w/ hard vowel</th>
+                <th>Ends w/ soft vowel + cons.</th>
+                <th>Ends w/ hard vowel + cons.</th>
+            </tr>
+            <tr>
+                <td>1st sing. мен</td>
+                <td>-ймін</td>
+                <td>-ймын</td>
+                <td>-емін</td>
+                <td>-амын</td>
+            </tr>
+            <tr>
+                <td>2nd sing. сен</td>
+                <td>-йсің</td>
+                <td>-йсың</td>
+                <td>-есің</td>
+                <td>-асың</td>
+            </tr>
+            <tr>
+                <td>3rd sing. ол</td>
+                <td>-йді</td>
+                <td>-йды</td>
+                <td>-еді</td>
+                <td>-ады</td>
+            </tr>
+            <tr>
+                <td>1st plur. біз</td>
+                <td>-йміз</td>
+                <td>-ймыз</td>
+                <td>-еміз</td>
+                <td>-амыз</td>
+            </tr>
+            <tr>
+                <td>2nd plur. сендер</td>
+                <td>-йсіңдер</td>
+                <td>-йсыңдаз</td>
+                <td>-есіңдер</td>
+                <td>-асыңдар</td>
+            </tr>
+            <tr>
+                <td>3rd plur. олар</td>
+                <td>-йді</td>
+                <td>-йды</td>
+                <td>-еді</td>
+                <td>-ады</td>
             </tr>
         </table>
     </div>
