--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -46,66 +46,66 @@
             </tr>
             <tr>
                 <td>Nominative</td>
-                <td>-мен</td>
-                <td>-сен</td>
-                <td>-ол</td>
-                <td>-біз</td>
-                <td>-сенер</td>
-                <td>-олар</td>
+                <td>мен</td>
+                <td>сен</td>
+                <td>ол</td>
+                <td>біз</td>
+                <td>сенер</td>
+                <td>олар</td>
             </tr>
             <tr>
                 <td>Accusative</td>
-                <td>-мені</td>
-                <td>-сені</td>
-                <td>-оны</td>
-                <td>-бізді</td>
-                <td>-сендерді</td>
-                <td>-оларды</td>
+                <td>мені</td>
+                <td>сені</td>
+                <td>оны</td>
+                <td>бізді</td>
+                <td>сендерді</td>
+                <td>оларды</td>
             </tr>
             <tr>
                 <td>Genitive</td>
-                <td>-менің</td>
-                <td>-сенің</td>
-                <td>-оның</td>
-                <td>-біздің</td>
-                <td>-сендердің</td>
-                <td>-олардың</td>
+                <td>менің</td>
+                <td>сенің</td>
+                <td>оның</td>
+                <td>біздің</td>
+                <td>сендердің</td>
+                <td>олардың</td>
             </tr>
             <tr>
                 <td>Dative</td>
-                <td>-маған</td>
-                <td>-саған</td>
-                <td>-оған</td>
-                <td>-бізге</td>
-                <td>-сендерге</td>
-                <td>-оларға</td>
+                <td>маған</td>
+                <td>саған</td>
+                <td>оған</td>
+                <td>бізге</td>
+                <td>сендерге</td>
+                <td>оларға</td>
             </tr>
             <tr>
                 <td>Locative</td>
-                <td>-менде</td>
-                <td>-сенде</td>
-                <td>-онда</td>
-                <td>-бізде</td>
-                <td>-сендерде</td>
-                <td>-оларда</td>
+                <td>менде</td>
+                <td>сенде</td>
+                <td>онда</td>
+                <td>бізде</td>
+                <td>сендерде</td>
+                <td>оларда</td>
             </tr>
             <tr>
                 <td>Ablative</td>
-                <td>-менен</td>
-                <td>-сенен</td>
-                <td>-одан</td>
-                <td>-бізден</td>
-                <td>-сендерден</td>
-                <td>-олардан</td>
+                <td>менен</td>
+                <td>сенен</td>
+                <td>одан</td>
+                <td>бізден</td>
+                <td>сендерден</td>
+                <td>олардан</td>
             </tr>
             <tr>
                 <td>Instrumental</td>
-                <td>-менімен</td>
-                <td>-сенімен</td>
-                <td>-онымен</td>
-                <td>-бізбен</td>
-                <td>-сендермен</td>
-                <td>-олармен</td>
+                <td>менімен</td>
+                <td>сенімен</td>
+                <td>онымен</td>
+                <td>бізбен</td>
+                <td>сендермен</td>
+                <td>олармен</td>
             </tr>
         </table>
     </div>
@@ -173,7 +173,7 @@
             <tr>
                 <td>2nd plur. сендер</td>
                 <td>-йсіңдер</td>
-                <td>-йсыңдаз</td>
+                <td>-йсыңдар</td>
                 <td>-есіңдер</td>
                 <td>-асыңдар</td>
             </tr>
