adding other languages

--- a/kazakh/kazakh.html
+++ b/kazakh/kazakh.html
@@ -15,10 +15,14 @@
 <body>
     <div id="wave_top">
         <svg viewBox="0 0 1000 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-          <path d="M1000,101.71c0,0-106.81-108.65-238.66,0s-261.34,0-261.34,0s-106.81-108.65-238.66,0S0,101.71,0,101.71V0h1000 V101.71z" style="stroke: none;fill: #f2e269;"></path>
+          <path d="M1000,101.71c0,0-106.81-108.65-238.66,0s-261.34,0-261.34,0s-106.81-108.65-238.66,0S0,101.71,0,101.71V0h1000 V101.71z"></path>
         </svg>
     </div>
+    <!--
+    <h1 id="title"><i class="baguette"></i>   My french words   <i class="baguette"></i></h1>
     <h1 id="title"><i class="fa-solid fa-sun"></i>   My kazakh words   <i class="fa-solid fa-sun"></i></h1>
+    -->
+    <h1 id="title"><i class="star"></i>   My russian words   <i class="star"></i></h1>
     <div id="search_bar_div">
         <input id="search_bar" type="text" id="search_input" placeholder="" autofocus>
     </div>
