added russian translations

--- a/kazakh/kazakh.html
+++ b/kazakh/kazakh.html
@@ -35,7 +35,7 @@
             <div class="progress"></div>
             <div class="progress_total"></div>
         </div>
-        <p id="guess_word"></p>
+        <div id="guess_word"><p></p></div>
         <input id="guess_input" type="text" placeholder="Enter a guess" autofocus>
         <p id="guess_result"></p>
     </div>
