--- a/pool/index.html
+++ b/pool/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <img class="pool_graph"/>
+    <button onclick="load_chart(0)" disabled>Monday</button>
     <button onclick="load_chart(1)">Tuesday</button>
     <button onclick="load_chart(2)">Wednesday</button>
     <button onclick="load_chart(3)">Thursday</button>
