--- a/pool/index.html
+++ b/pool/index.html
@@ -26,7 +26,7 @@
 
         function load_chart(day_i){
             var pool_graph = document.querySelector('.pool_graph');
-            var url = 'https://174.138.15.127/images/pool_' + days[day_i] + ".png?" +  Date.now();
+            var url = 'images/pool_' + days[day_i] + ".png?" +  Date.now();
             pool_graph.src = url;
         }
 
